# systray-rs

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs
examples/: systray-example.rs  trayicon.rs
src/: lib.rs  windows.rs
src/api/: mod.rs
src/api/cocoa/: mod.rs
src/api/linux/: mod.rs
src/api/win32/: mod.rs  winapipatch.rs
