[package]
name = "systray"
version = "0.3.0"
authors = ["Kyle Machulis <kyle@machul.is>"]
description = "Rust library for making minimal cross-platform systray GUIs"
license = "BSD-3-Clause"
homepage = "http://github.com/qdot/systray-rs"
repository = "https://github.com/qdot/systray-rs.git"
readme = "README.md"
keywords = ["gui"]

[dependencies]
log= "0.4.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi= "0.2.0"
user32-sys= "0.2.0"
kernel32-sys= "0.2.2"
libc= "0.2.40"

[target.'cfg(target_os = "linux")'.dependencies]
gtk= "0.4.0"
glib= "0.5.0"
libappindicator= "0.4.0"

# [target.'cfg(target_os = "macos")'.dependencies]
# objc="*"
# cocoa="*"
# core-foundation="*"
